--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <p>Main branch idex file</p>
+    <h1>Hello world</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error id asperiores modi suscipit quam sequi similique
+        placeat quas, ex repellat. Harum unde asperiores dolor sequi similique dolorem doloremque inventore eum!</p>
 </body>
+
 </html>
