--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <p>Main branch idex file</p>
+    <p>Main branch index file(paragraph)</p>
     <h1>Hello world</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error id asperiores modi suscipit quam sequi similique
         placeat quas, ex repellat. Harum unde asperiores dolor sequi similique dolorem doloremque inventore eum!</p>
